[project]
name = "umass-ride-share"
version = "0.1.0"
description = "A Simple web app for ride sharing between Amherst ↔ Boston/NYC"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "streamlit>=1.37.0",
    "pymongo[srv]==3.12",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
]

[tool.uv]
